fix: Fix some route paths
